[gd_scene load_steps=9 format=3 uid="uid://b6p2m7k3d8yqn"]

[ext_resource type="Script" path="res://scripts/Shop.gd" id="1_shop"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.08, 0.08, 0.1, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.7, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_title"]
bg_color = Color(0.12, 0.12, 0.15, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.35, 0.35, 0.4, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.2, 0.2, 0.25, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_item"]
bg_color = Color(0.15, 0.15, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.35, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_detail"]
bg_color = Color(0.12, 0.12, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.4, 0.15, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="Panel" parent="MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_title")

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LeftMargin" type="Control" parent="MainPanel/VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Title" type="Label" parent="MainPanel/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "魂印商城"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="MainPanel/VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="MainPanel/VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "关闭"

[node name="RightMargin" type="Control" parent="MainPanel/VBoxContainer/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="LeftPanel" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopMargin" type="Control" parent="MainPanel/VBoxContainer/ContentContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBoxContainer/ContentContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsContainer" type="GridContainer" parent="MainPanel/VBoxContainer/ContentContainer/LeftPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="BottomMargin" type="Control" parent="MainPanel/VBoxContainer/ContentContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="RightPanel" type="Panel" parent="MainPanel/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_detail")

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DetailContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TopMargin" type="Control" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="DetailTitle" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "选择魂印查看详情"
horizontal_alignment = 1

[node name="Separator1" type="ColorRect" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0.4, 0.35, 0.15, 0.5)

[node name="InfoMargin" type="MarginContainer" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="InfoContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="QualityLabel" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "品质："
horizontal_alignment = 1

[node name="ShapeLabel" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "形状："

[node name="PowerLabel" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "力量："

[node name="Separator2" type="ColorRect" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.4, 0.35, 0.15, 0.3)

[node name="DescLabel" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "描述："
autowrap_mode = 3

[node name="PriceLabel" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "价格：免费（调试）"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
disabled = true
text = "购买"

[node name="Spacer" type="Control" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessageDialog" type="AcceptDialog" parent="."]
title = "提示"
initial_position = 1
size = Vector2i(400, 150)
ok_button_text = "确定"

[connection signal="pressed" from="MainPanel/VBoxContainer/TopBar/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MainPanel/VBoxContainer/ContentContainer/RightPanel/ScrollContainer/DetailContainer/InfoMargin/InfoContainer/BuyButton" to="." method="_on_buy_button_pressed"]

